# Colorectal-Cancer-Survaival-Prediction

./: .gitignore  Dockerfile  Jenkinsfile  README.md  application.py  colorectal_cancer_pipeline.yaml  pyproject.toml  requirements.txt  setup.py
artifacts/models/: model.pkl
artifacts/processed/: X_test.pkl  label_encoders.pkl  scaler.pkl  y_test.pkl  y_train.pkl
config/: config.yaml  credentials.json  path_config.py
kubeflow_pipeline/: pipeline.py
mlruns/0/: meta.yaml
mlruns/0/8759566ec86c4c44b80ed804ff459bfb/: meta.yaml
mlruns/0/8759566ec86c4c44b80ed804ff459bfb/metrics/: F1 Score  Precision Score  Recall Score  Roc_AUC  accuracy
mlruns/0/8759566ec86c4c44b80ed804ff459bfb/tags/: mlflow.runName  mlflow.source.git.commit
notebook/: notebook.ipynb
pipeline/: training_pipeline.py
src/: custom_exception.py  data_ingestion.py  data_processing.py  logger.py  model_training.py
static/: style.css
templates/: index.html
utils/: common_functions.py
